Fix alignment of payment-status

--- a/indico/htdocs/sass/modules/_registrationform.scss
+++ b/indico/htdocs/sass/modules/_registrationform.scss
@@ -299,6 +299,9 @@
 
         i {
             font-size: 1.5em;
+            &:before {
+                vertical-align: -15%;
+            }
         }
     }
 }
